[Resolves#160055489 , #160190706 , #160190705] Edit TCP Page
# Story Title

[TCP Page - edit tocbot](https://www.pivotaltracker.com/story/show/160055489)

# Changes made

- made tocbot scroll
- created space between top navbar and tocbot while page is scrolling

# How does the solution addresses the problem

- allows user to scroll on tocbot when tcp page is scrolled down
- prevents the first word in toc to overlap under the top navbar

--- a/client/src/stylesheets/tcpage.scss
+++ b/client/src/stylesheets/tcpage.scss
@@ -54,6 +54,25 @@ a {
 }
 .section-text {
   line-height: 20px;
+  .community-guideline-list {
+    li {
+      display: list-item;
+      list-style-type: decimal;
+      margin-top: 10px;
+    }
+  }
+
+  .bar-button a {
+    color: #ffffff;
+  }
+  .contact-us-button {
+    box-shadow: none;
+    border: none;
+    width: 200px;
+    margin: 0;
+    background: #B3CB75;
+    letter-spacing: 1.3px;
+  }
   @at-root p#{&},
     p#{&} a {
     font-weight: 200px;
